<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EducationActivity">

    <TextView
        android:id="@+id/textSelectEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_education_level"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="362dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edu_level_exp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSelectEducation" />

    <RadioGroup
        android:id="@+id/radioSelectEducation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioBelowHighSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_below_high_school"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioHighSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_high_school"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioBachelor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_bachelors_degree"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioMaster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_masters_degree"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioPhd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_phd_or_higher"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioTradeSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_trade_school"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioPreferNot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_prefer_not_to_say"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>