<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LivingStatusActivity">

    <TextView
        android:id="@+id/textSelectLivingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_living_status"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/liv_exp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSelectLivingStatus" />

    <RadioGroup
        android:id="@+id/radioLivingStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioHomeOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liv_homeowner"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioRenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liv_renter"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioLessee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liv_lessee"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioLSOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liv_other"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioLSPreferNot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prefer_not_to_say"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnLSCancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLSSubmit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>