<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".IdentificationActivity">

    <TextView
        android:id="@+id/textIdfInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/identification_info"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/idf_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIdfInfo" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/idf_hint_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textName"
        app:layout_constraintTop_toTopOf="@+id/textName" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/idf_email"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/idf_hint_email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textEmail"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toTopOf="@+id/textEmail" />

    <TextView
        android:id="@+id/textRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/idf_role"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textEmail"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <RadioGroup
        android:id="@+id/radioRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail">

        <RadioButton
            android:id="@+id/radioStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idf_role_student" />

        <RadioButton
            android:id="@+id/radioEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idf_role_employee" />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idf_role_other" />

    </RadioGroup>

    <Button
        android:id="@+id/btnIdfNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>